--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hardy-portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <div class="name">
+          <h1 style="font-size: 40px; font-family: 'Open Sans', sans-serif">
+            Ma<span style="color: orange">r</span>y
+          </h1>
+        </div>
+
+        <div class="nav_bar">
+          <ul>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a class="hire_me" href="">Hire Me</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="introduction">
+        <div class="name_about">
+          <h3 style="font-size: 40px; margin-bottom: 20px">Hi, I am</h3>
+          <h1 style="font-size: 60px; margin-bottom: 20px">Mary Hardy</h1>
+          <h4 style="font-style: italic">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </h4>
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
