adding image at intro_section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hardy-portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/navbar.css" />
+    <link rel="stylesheet" href="styles/intro.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -20,18 +32,31 @@
           <ul>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Blog</a></li>
-            <li><a class="hire_me" href="">Hire Me</a></li>
+            <li><button class="Hire_me">Hire me</button></li>
           </ul>
         </div>
       </nav>
       <div class="introduction">
         <div class="name_about">
-          <h3 style="font-size: 40px; margin-bottom: 20px">Hi, I am</h3>
+          <h3 style="font-size: 40px; margin-bottom: 20px; font-weight: 300">
+            Hi, I am
+          </h3>
           <h1 style="font-size: 60px; margin-bottom: 20px">Mary Hardy</h1>
-          <h4 style="font-style: italic">
+          <h4 style="font-weight: normal; color: #757575">
             Shot what able cold new see hold.Friendly as an betrayed formerly
+            <br />
             he. Morning because as to society behaved moments.
           </h4>
+        </div>
+        <div class="cv_contact">
+          <div class="cv">
+            <button class="Download">
+              <i class="bx bx-download"></i>Download CV
+            </button>
+          </div>
+          <div class="contact">
+            <button><i class="bx bxs-contact"></i>Contact</button>
+          </div>
         </div>
       </div>
     </header>
