done with main section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Hardy-portfolio</title>
     <link rel="stylesheet" href="styles/navbar.css" />
     <link rel="stylesheet" href="styles/intro.css" />
+    <link rel="stylesheet" href="styles/mainboy.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,30 +39,195 @@
         </div>
       </nav>
       <div class="introduction">
-        <div class="name_about">
-          <h3 style="font-size: 40px; margin-bottom: 20px; font-weight: 300">
-            Hi, I am
-          </h3>
-          <h1 style="font-size: 60px; margin-bottom: 20px">Mary Hardy</h1>
-          <h4 style="font-weight: normal; color: #757575">
-            Shot what able cold new see hold.Friendly as an betrayed formerly
-            <br />
-            he. Morning because as to society behaved moments.
-          </h4>
+        <div class="description">
+          <div class="name_about">
+            <h3 style="font-size: 40px; margin-bottom: 20px; font-weight: 300">
+              Hi, I am
+            </h3>
+            <h1 style="font-size: 60px; margin-bottom: 20px">Mary Hardy</h1>
+            <h4 style="font-weight: normal; color: #757575">
+              Shot what able cold new see hold.Friendly as an betrayed formerly
+              <br />
+              he. Morning because as to society behaved moments.
+            </h4>
+          </div>
+          <div class="cv_contact">
+            <div class="cv">
+              <button class="Download">
+                <i class="bx bx-download"></i>Download CV
+              </button>
+            </div>
+            <div class="contact">
+              <button><i class="bx bxs-contact"></i>Contact</button>
+            </div>
+          </div>
         </div>
-        <div class="cv_contact">
-          <div class="cv">
-            <button class="Download">
-              <i class="bx bx-download"></i>Download CV
-            </button>
-          </div>
-          <div class="contact">
-            <button><i class="bx bxs-contact"></i>Contact</button>
-          </div>
+        <div class="image_description">
+          <img class="bgm" src="images/header_bg.png" alt="" />
+          <img class="hardy" src="images/hardy.png" alt="" />
         </div>
       </div>
     </header>
-    <main></main>
+
+    <main>
+      <div class="About_me">
+        <h1>About me</h1>
+        <p>
+          I am a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata
+        </p>
+        <div class="info_section">
+          <div>
+            <h2>Name</h2>
+            <p>Mary Hardy</p>
+          </div>
+
+          <div>
+            <h2>Email</h2>
+            <p>Maryhardy@gmail.com</p>
+          </div>
+
+          <div>
+            <h2>Phone</h2>
+            <p>01991206733</p>
+          </div>
+
+          <div>
+            <h2>Address</h2>
+            <p>Washington DC</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="what_ido">
+        <h1>What I do</h1>
+        <p>
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio
+        </p>
+      </div>
+      <div class="blocks">
+        <div class="javascript">
+          <img src="images/icons/js.png" alt="" />
+          <h3>Vanilla Javascript</h3>
+          <p>
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+        <div class="javascript">
+          <img src="images/icons/react.png" alt="" />
+          <h3>React</h3>
+          <p>
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+        <div class="javascript">
+          <img src="images/icons/mongo.png" alt="" />
+          <h3>Mongo</h3>
+          <p>
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+        <div class="javascript">
+          <img src="images/icons/nodejs.png" alt="" />
+          <h3>Node.js</h3>
+          <p>
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+      </div>
+
+      <div class="resume_summary">
+        <h2>A summary of My Resume</h2>
+        <div class="right_leftsection">
+          <div class="left_sec">
+            <section>
+              <h2>My Education</h2>
+              <h3>Masters in computer Science</h3>
+              <h4>Harvard University/2015-2017</h4>
+              <p>
+                ist skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor
+              </p>
+              <hr />
+            </section>
+            <section>
+              <h3>Masters in computer Science</h3>
+              <h4>Harvard University/2015-2017</h4>
+              <p>
+                ist skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor
+              </p>
+              <hr />
+            </section>
+            <section>
+              <h3>Masters in computer Science</h3>
+              <h4>Harvard University/2015-2017</h4>
+              <p>
+                ist skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor
+              </p>
+              <hr />
+            </section>
+          </div>
+          <div class="right_sec">
+            <section>
+              <h2>My Experience</h2>
+              <h3>Sr. Font End Developer</h3>
+              <h4>Apple Inc / 2020 - Current</h4>
+              <p>
+                ist skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor
+              </p>
+              <hr />
+            </section>
+            <section>
+              <h3>Junr Web intern</h3>
+              <h4>Cefalo corporation</h4>
+              <p>
+                ist skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor
+              </p>
+              <hr />
+            </section>
+            <section>
+              <h3>Masters in computer Science</h3>
+              <h4>Harvard University/2015-2017</h4>
+              <p>
+                ist skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor
+              </p>
+              <hr />
+            </section>
+          </div>
+        </div>
+        <div class="button_block">
+          <button class="Download">
+            <i class="bx bx-download"></i>Download CV
+          </button>
+        </div>
+      </div>
+    </main>
+
     <footer></footer>
   </body>
 </html>
