--- a/index.html
+++ b/index.html
@@ -228,6 +228,36 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer_block">
+        <div class="contact_us">
+          <h2>Lets Connect</h2>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between <br />
+            9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+
+          <div class="social_media">
+            <a href=""><i class="bx bxl-facebook"></i></a>
+            <a href=""><i class="bx bxl-whatsapp"></i></a>
+            <a href=""><i class="bx bxl-twitter"></i></a>
+          </div>
+        </div>
+
+        <div class="form_fill">
+          <h2>Lets message me</h2>
+
+          <div class="form_sec">
+            <form action="">
+              <input type="text" name="" id="" placeholder="Your name" /><br />
+              <input type="email" name="" id="" placeholder="Your email" /><br />
+              <textarea name="" id="" cols="30" rows="10"></textarea><br />
+              <button class="Download">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
