--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <form action="">
               <input type="text" name="" id="" placeholder="Your name" /><br />
               <input type="email" name="" id="" placeholder="Your email" /><br />
-              <textarea name="" id="" cols="30" rows="10"></textarea><br />
+              <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea><br />
               <button class="Download">Submit</button>
             </form>
           </div>
